[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "von/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["von"]

[project]
name = "vondb"
description = "VON: vEnhance's Olympiad Navigator"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MPL-2.0" }
readme = "README.md"
urls = { repository = "https://github.com/vEnhance/von/" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyperclip>=1.9.0",
    "PyYAML>=6.0.2",
    'pyreadline3>=3.0.6; sys_platform == "win32"',
    'colorama>=0.4.3; sys_platform == "win32"'
]
dynamic = ["version"]

[project.scripts]
von = "von.__main__:main"

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "codespell>=2.4.1",
    "toml>=0.10.2",
    "ruff>=0.9.7",
    "ty>=0.0.24",
]

[tool.ruff]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.codespell]
skip = "von/puid.py"
count = ""
quiet-level = 3
ignore-words-list = "ques"
